feat(core): i18n implementation and update seeder