@@ -1,6 +1,7 @@
 package fr.avenirsesr.portfolio.api.infrastructure.adapter.seeder;
 
 import fr.avenirsesr.portfolio.api.domain.model.SkillLevel;
+import fr.avenirsesr.portfolio.api.domain.model.enums.ELanguage;
 import fr.avenirsesr.portfolio.api.domain.model.enums.ESkillLevelStatus;
 import java.util.UUID;
 
@@ -16,7 +17,18 @@ public class FakeSkillLevel {
     return new FakeSkillLevel(
         SkillLevel.create(
             UUID.fromString(faker.call().internet().uuid()),
-            "Niv. %s".formatted(faker.call().lorem().character())));
+            "Niv. %s".formatted(faker.call().lorem().character()),
+            faker.call().lorem().sentence(),
+            ELanguage.FRENCH));
+  }
+
+  public static FakeSkillLevel of(SkillLevel skillLevel, ELanguage language) {
+    return new FakeSkillLevel(
+        SkillLevel.create(
+            skillLevel.getId(),
+            String.format("%s %s", skillLevel.getName(), language.getCode()),
+            String.format("%s %s", skillLevel.getDescription(), language.getCode()),
+            language));
   }
 
   public FakeSkillLevel withStatus(ESkillLevelStatus status) {
